--- a/apps/home/static/css/home-style.css
+++ b/apps/home/static/css/home-style.css
@@ -13,8 +13,13 @@ body {
 }
 
 #logo {
-  margin-top: 20vh;
+  margin-top: 5vh;
 }
+
+.hidden {
+  opacity: 0;
+}
+
 
 #inside-footer {
   position: fixed;
