--- a/apps/home/templates/layouts/base.html
+++ b/apps/home/templates/layouts/base.html
@@ -7,28 +7,28 @@
 
 <!-- Primary Meta Tags -->
 <title>
-    Goodhues.ai - {% block title %}{% endblock %} | Goodhues
+    GoodPivot.ai - {% block title %}{% endblock %} | GoodPivot
 </title>
 
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<meta name="title" content="Goodhues.ai - AI generated interior design">
-<meta name="author" content="Goodhues.ai">
-<meta name="description" content="Goodhues.ai - AI generated interior design">
-<meta name="keywords" content="interior design" />
+<meta name="title" content="GoodPivot.ai - AI Integration">
+<meta name="author" content="GoodPivot.ai">
+<meta name="description" content="GoodPivot.ai - AI Integration">
+<meta name="keywords" content="AI Integration" />
 
 <!-- Open Graph / Facebook -->
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://goodhues.ai">
-<meta property="og:title" content="Goodhues.ai - AI generated interior design">
-<meta property="og:description" content="Goodhues.ai - AI generated interior design">
-<meta property="og:image" content="apps/static/assets/img/photos/Preview.png">
+<meta property="og:url" content="https://goodpivot.ai">
+<meta property="og:title" content="GoodPivot.ai - AI Integration">
+<meta property="og:description" content="GoodPivot.ai - AI Integration">
+<meta property="og:image" content="apps/home/static/img/preview.png">
 
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image">
-<meta property="twitter:url" content="https://goodhues.ai">
-<meta property="twitter:title" content="Goodhues.ai - AI generated interior design">
-<meta property="twitter:description" content="Goodhues.ai - AI generated interior design">
-<meta property="twitter:image" content="apps/static/assets/img/photos/Preview.png">
+<meta property="twitter:url" content="https://goodpivot.ai">
+<meta property="twitter:title" content="GoodPivot.ai - AI Integration">
+<meta property="twitter:description" content="GoodPivot.ai - AI Integration">
+<meta property="twitter:image" content="apps/home/static/img/preview.png">
 
 <!-- Favicon -->
 <link rel="apple-touch-icon" sizes="120x120" href="/static/assets/img/favicon/apple-touch-icon.png">
