--- a/apps/home/static/css/home-style.css
+++ b/apps/home/static/css/home-style.css
@@ -232,7 +232,26 @@ body {
     margin-bottom: 1.25rem;
 }
 
+/* Text animation */
+.falling-letter {
+  opacity: 0;
+  transform: translateY(-100%);
+  transition: opacity 0.5s ease, transform 0.5s ease;
+}
 
+@keyframes fallingAnimation {
+  0% {
+    opacity: 0;
+    transform: translateY(-100%);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+
+/* Squares animation NOT IN USE */
 .animation-container {
   position: fixed;
   top: 60%;
