--- a/apps/home/templates/home/index.html
+++ b/apps/home/templates/home/index.html
@@ -393,6 +393,7 @@ function fadeLettersIn(textDivId) {
 
     var interval = setInterval(function () {
       spanElements[counter].style.opacity = 1;
+      spanElements[counter].classList.add('fall-animation');
       counter++;
 
       if (counter === spanElements.length) {
@@ -413,7 +414,6 @@ function fadeLettersIn(textDivId) {
     }
   }
 }
-
 
 
 
