--- a/apps/home/static/css/home-style.css
+++ b/apps/home/static/css/home-style.css
@@ -235,23 +235,22 @@ body {
 
 .falling-letter {
   opacity: 0;
-  animation-name: falling;
-  animation-duration: 1s;
-  animation-timing-function: ease-in-out;
-  animation-fill-mode: forwards;
 }
 
-@keyframes falling {
+.fall-animation {
+  animation-name: fall;
+  animation-duration: 1s; /* Adjust the duration for the desired falling speed */
+  animation-timing-function: ease-in-out; /* Adjust the timing function for the desired easing effect */
+}
+
+@keyframes fall {
   0% {
-    opacity: 0;
-    transform: translateY(-50px);
+    transform: translateY(-100px); /* Adjust the initial position of falling */
   }
   100% {
-    opacity: 1;
-    transform: translateY(0);
+    transform: translateY(0); /* Adjust the final position where the letter settles */
   }
 }
-
 
 
 /* Squares animation NOT IN USE */
