--- a/apps/home/static/css/home-style.css
+++ b/apps/home/static/css/home-style.css
@@ -235,22 +235,16 @@ body {
 
 .falling-letter {
   opacity: 0;
+  position: relative;
+  top: -50px; /* Adjust the initial position of falling */
+  transition: opacity 0.5s ease-in-out, top 0.5s ease-in-out; /* Adjust the transition duration and easing */
 }
 
-.fall-animation {
-  animation-name: fall;
-  animation-duration: 1s; /* Adjust the duration for the desired falling speed */
-  animation-timing-function: ease-in-out; /* Adjust the timing function for the desired easing effect */
+.falling-letter.active {
+  opacity: 1;
+  top: 0;
 }
 
-@keyframes fall {
-  0% {
-    transform: translateY(-100px); /* Adjust the initial position of falling */
-  }
-  100% {
-    transform: translateY(0); /* Adjust the final position where the letter settles */
-  }
-}
 
 
 /* Squares animation NOT IN USE */
