--- a/apps/home/templates/home/index.html
+++ b/apps/home/templates/home/index.html
@@ -388,12 +388,11 @@ function fadeLettersIn(textDivId) {
     }
     textDivId.innerHTML = randomizedText;
 
-    var spanElements = textDivId.getElementsByTagName("span");
+    var spanElements = textDivId.getElementsByClassName("falling-letter");
     var counter = 0;
 
     var interval = setInterval(function () {
-      spanElements[counter].style.opacity = 1;
-      spanElements[counter].classList.add('fall-animation');
+      spanElements[counter].classList.add("active");
       counter++;
 
       if (counter === spanElements.length) {
@@ -407,13 +406,14 @@ function fadeLettersIn(textDivId) {
           fadeLettersIn(nextDiv);
         }
       }
-    }, 10); // Adjust the interval (in milliseconds) for the desired fading effect
+    }, 100); // Adjust the interval (in milliseconds) for the desired fading effect
   } else {
     if (chatDiv.style.display == 'block') {
       userInputTextArea.focus();
     }
   }
 }
+
 
 
 
