Falling letters CSS

--- a/apps/home/templates/home/index.html
+++ b/apps/home/templates/home/index.html
@@ -389,10 +389,10 @@ function fadeLettersIn(textDivId) {
     textDivId.innerHTML = randomizedText;
 
     var spanElements = textDivId.getElementsByClassName("falling-letter");
-    console.log(spanElements);
     var counter = 0;
 
     var interval = setInterval(function () {
+      console.log(counter);
       spanElements[counter].classList.add("active");
       spanElements[counter].style.setProperty("top", "0px", "important");
       counter++;
