--- a/apps/home/templates/home/index.html
+++ b/apps/home/templates/home/index.html
@@ -392,8 +392,7 @@ function fadeLettersIn(textDivId) {
     var counter = 0;
 
     var interval = setInterval(function () {
-      console.log(spanElements[counter]);
-      spanElements[counter].classList.add("active");
+      spanElements[counter].style.opacity = 1;
       counter++;
 
       if (counter === spanElements.length) {
@@ -408,15 +407,13 @@ function fadeLettersIn(textDivId) {
         }
       }
     }, 10); // Adjust the interval (in milliseconds) for the desired fading effect
-
-    // Trigger reflow to force the initial state to be applied before the animation starts
-    spanElements[0].offsetHeight;
   } else {
     if (chatDiv.style.display == 'block') {
       userInputTextArea.focus();
     }
   }
 }
+
 
 
 
