--- a/apps/home/static/css/home-style.css
+++ b/apps/home/static/css/home-style.css
@@ -237,6 +237,10 @@ body {
   opacity: 0;
   position: relative;
   top: -50px; /* Adjust the initial position of falling */
+  transition: opacity 0.5s ease-in-out, top 0.7s ease-in-out; /* Adjust the transition duration and easing */
+}
+
+.falling-letter.active {
   animation-name: fall;
   animation-duration: 0.5s; /* Adjust the duration for the desired falling speed */
   animation-timing-function: ease-in-out; /* Adjust the timing function for the desired easing effect */
@@ -252,8 +256,6 @@ body {
     top: 0; /* Same as the final position */
   }
 }
-
-
 
 
 /* Squares animation NOT IN USE */
