Falling letters code

--- a/apps/home/templates/home/index.html
+++ b/apps/home/templates/home/index.html
@@ -330,7 +330,7 @@ const introElement = document.querySelector("#intro");
 const outputText = document.querySelector("#summary-text");
 const nextText = document.querySelector("#next-text");
 const wholeChat = document.querySelector("#whole-chat");
-const intro = 'Hey there, we are GoodPivot. We help you integrate AI into your business.';
+const intro = 'Hey there, we are GoodPivot -4. We help you integrate AI into your business.';
 let summary = "";
 let aiResponse = "";
 const greeting = "Hope you're having a great day!";
